2003-08-29  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Remove commented out with clause.

2003-08-28  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 5.5. This version uses lot less stack.

2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Use variable instead of directly calling tools.

2003-08-02  Pascal Obry  <p.obry@wanadoo.fr>

	* src_include.gpr:
	Initial revision.
	
	* makefile:
	Add section to build AWS based on project files.
	(gbuild): New target.
	(gclean): Idem.
	(gsetup): Idem.

	* include.gpr: 
	New version, this version make it possible to develop AWS using
	 the project files from GPS.

2003-07-31  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 5.4. Fix memory leak for missing include files.

2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(../src/aws-os_lib.adb): Copy from the config directory.

	* include.gpr:
	Initial revision.

2003-03-27  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 5.3. Fix Vector_Tag memory leak. This version
	 has been used in a large project and checked with gnatmem, it
	 should be memory leak free at this point.

2003-03-25  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 5.2. Fix include files memory leak.

2003-03-21  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-std-gnat.adb:
	(Get_Inet_Addr): New routine.
	(Bind): Use it.
	(Connect): Use it.
	Fixes a problem to connect to some servers using the IP address.
	
2003-03-15  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 5.1.

2003-03-11  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser.adb:
	Update to version 4.9. Bug fix.

2003-03-05  Pascal Obry  <p.obry@wanadoo.fr>

	* templates_parser-input.adb:
	Update to version 4.8. Memory leak fix when using a non existent
	 template.

2003-03-04  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-std-gnat.adb, aws-net-std-adasockets.adb: